Fixed phone number input error message overlapping

--- a/client/src/app/calling/steps/verify-number-step/verify-number.component.scss
+++ b/client/src/app/calling/steps/verify-number-step/verify-number.component.scss
@@ -30,3 +30,6 @@
   height: 125px;
   width: 125px;
 }
+.dmep-phone-number-field-wrapper {
+  min-height: 5rem; // min height to avoid layout shift when error message shows
+}
